--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -61,3 +61,9 @@ input {
     border: none;
     border-bottom: 1px solid black;
 }
+
+@media screen and (max-width: 480px) {
+    .c-wrapper {
+        flex-direction: column;
+    }
+}
