--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -74,3 +74,22 @@
     width: 100%;
     object-fit: cover;
   }
+
+
+  @media screen and (max-width: 480px) {
+    .i {
+      flex-direction: column;
+    }
+
+    .i-title-item {
+      justify-content: center;
+    }
+
+    .i-left-wrapper {
+      padding: 10px;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      height: 100%;
+    }
+  }
