--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -17,15 +17,21 @@
   }
   
   .i-left-wrapper {
-    padding: 50px;
-    height: 50%;
+    padding: 10px 20px;
+    height: fit-content;
     background-color: #CCCCFF;
-  }
+}
+
+h5 {
+  font-size: 1.25rem;
+  padding: 0;
+  margin: 0;
+}
   
-  .i-intro {
-    font-size: 30px;
-    font-weight: 300;
-  }
+.i-intro {
+  font-weight: 300;
+  margin: 0;
+}
   
   .i-name {
     font-size: 30px;
@@ -39,11 +45,13 @@
   .i-title-wrapper {
     height: 100%;
     animation: move 8s ease-in-out infinite alternate;
-  }
-/* 
+  } 
+ 
   .i-desc {
-    display: inline-block;
-  } */
+    font-weight: bold;
+    font-size: 0.8rem;
+    box-sizing:inherit;
+}
   
   @keyframes move {
     25% {
@@ -53,7 +61,7 @@
       transform: translateY(-100px);
     }
     75% {
-      transform: translateY(-1500px);
+      transform: translateY(-150px);
     }
     100% {
       transform: translateY(-200px);
@@ -85,11 +93,15 @@
       justify-content: center;
     }
 
+    .i-right {
+      display: none;
+  }
+
     .i-left-wrapper {
       padding: 10px;
       align-items: center;
       justify-content: center;
       text-align: center;
-      height: 100%;
+      /* height: 100%; */
     }
   }
