--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -1,45 +1,36 @@
 .contact {
-    height: 60vh;
-    position: relative;
+    height: fit-content;
     background-color: #D3D3D3;
-}
-
-.c-bg {
-    width: 20px;
-    height: 100%;
-    /* background-color: black; */
-    position: absolute;
-}
-
- .c-wrapper {
     padding: 50px;
-    display: flex;
-    /* grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(1, 1fr); */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
 } 
 
-.c-left{
-    flex: 1;
+.c-info {
     text-align: left;
 }
 
-.c-right {
-    flex: 1;
+h3 {
+    padding-bottom: 5px;
+}
+
+.c-icon {
+    margin-right: 8px;
+}
+
+.c-icon a {
+    color: #0275d8;
 }
 
 .c-title {
     font-size: 30px;
-    width: 30%;
     text-align: center;
 }
 
 .c-info-item {
-    display: flex;
-    align-items: center;
-    margin: 50px 0px;
+    padding: 50px 0px;
     font-weight: 300;
-    width: 70%;
-    margin-left: 30px;
 }
 
 .c-icon {
@@ -51,10 +42,6 @@
     font-weight: 200;
 }
 
-form {
-    margin-top: 20px;
-}
-
 input {
     width: 50%;
     height: 50px;
@@ -62,8 +49,9 @@ input {
     border-bottom: 1px solid black;
 }
 
-@media screen and (max-width: 480px) {
-    .c-wrapper {
+@media screen and (max-width: 600px) {
+    .contact {
+        display: flex;
         flex-direction: column;
     }
 }
